--- a/index.html
+++ b/index.html
@@ -44,18 +44,18 @@
       </ul>
     </section>
     <section class="photo-grid">
-      <img class="photo-item" src="./images/photo-grid-train.jpg" alt="Поезд">
-      <img class="photo-item" src="./images/photo-grid-atharva-tulsi.jpg" alt="Атхарва">
-      <img class="photo-item" src="./images/photo-grid-tuman.jpg" alt="Туман">
-      <img class="photo-item" src="./images/photo-grid-sochi.jpg" alt="Сочи">
-      <img class="photo-item" src="./images/photo-grid-arisa.jpg" alt="Ариса">
-      <img class="photo-item" src="./images/photo-grid-baikal.jpg" alt="Байкал">
-      <img class="photo-item" src="./images/photo-grid-elbrus.jpg" alt="Эльбрус">
-      <img class="photo-item" src="./images/photo-grid-kondratiev.jpg" alt="Кондратьев">
-      <img class="photo-item" src="./images/photo-grid-kamchatka-1.jpg" alt="Камчатка">
-      <img class="photo-item" src="./images/photo-grid-kamchatka-2.jpg" alt="Камчатка-2">
-      <img class="photo-item" src="./images/photo-grid-baikal-2.jpg" alt="Байкал-2">
-      <img class="photo-item" src="./images/photo-grid-ergaki.jpg" alt="Ергаки">
+      <img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="Поезд">
+      <img class="photo-grid__item" src="./images/photo-grid-atharva-tulsi.jpg" alt="Атхарва">
+      <img class="photo-grid__item" src="./images/photo-grid-tuman.jpg" alt="Туман">
+      <img class="photo-grid__item" src="./images/photo-grid-sochi.jpg" alt="Сочи">
+      <img class="photo-grid__item" src="./images/photo-grid-arisa.jpg" alt="Ариса">
+      <img class="photo-grid__item" src="./images/photo-grid-baikal.jpg" alt="Байкал">
+      <img class="photo-grid__item" src="./images/photo-grid-elbrus.jpg" alt="Эльбрус">
+      <img class="photo-grid__item" src="./images/photo-grid-kondratiev.jpg" alt="Кондратьев">
+      <img class="photo-grid__item" src="./images/photo-grid-kamchatka-1.jpg" alt="Камчатка">
+      <img class="photo-grid__item" src="./images/photo-grid-kamchatka-2.jpg" alt="Камчатка-2">
+      <img class="photo-grid__item" src="./images/photo-grid-baikal-2.jpg" alt="Байкал-2">
+      <img class="photo-grid__item" src="./images/photo-grid-ergaki.jpg" alt="Ергаки">
     </section>
     <section class="places">
       <article class="place">
